--- a/Netology_IB_Instruments/ProfileView.xib
+++ b/Netology_IB_Instruments/ProfileView.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -8,64 +8,88 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileView" customModule="Netology_IB_Instruments" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileView" customModule="Netology_IB_Instruments" customModuleProvider="target">
+            <connections>
+                <outlet property="cityLabel" destination="Agz-Kb-KuX" id="RZ8-xh-30m"/>
+                <outlet property="dateLabel" destination="F1O-qU-QQ9" id="mGu-lu-NSh"/>
+                <outlet property="imageLabel" destination="8ka-Y2-nVK" id="1HN-6P-cJx"/>
+                <outlet property="nameLabel" destination="Mbq-5M-vh4" id="nM7-SC-cVu"/>
+                <outlet property="textLabel" destination="oS2-65-Ui4" id="JVM-jM-oNm"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ProfileView" customModule="Netology_IB_Instruments" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="350" height="450"/>
-            <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Имя" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mbq-5M-vh4">
-                    <rect key="frame" x="154" y="20" width="180" height="44"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Имя" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mbq-5M-vh4">
+                    <rect key="frame" x="154" y="10" width="186" height="40"/>
                     <color key="backgroundColor" systemColor="systemYellowColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="MbU-KI-Gut"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Дата рождения" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F1O-qU-QQ9">
-                    <rect key="frame" x="156" y="80" width="180" height="45"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Дата рождения" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F1O-qU-QQ9">
+                    <rect key="frame" x="154" y="70" width="186" height="40"/>
                     <color key="backgroundColor" systemColor="systemGreenColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="O0g-oW-cbB"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="oS2-65-Ui4">
-                    <rect key="frame" x="20" y="199" width="310" height="255"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oS2-65-Ui4">
+                    <rect key="frame" x="16" y="190" width="318" height="235"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <inset key="scrollIndicatorInsets" minX="0.0" minY="20" maxX="0.0" maxY="210"/>
                     <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                     <color key="textColor" systemColor="labelColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Город" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Agz-Kb-KuX">
-                    <rect key="frame" x="154" y="139" width="180" height="46"/>
-                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Город" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Agz-Kb-KuX">
+                    <rect key="frame" x="154" y="130" width="186" height="40"/>
                     <color key="backgroundColor" systemColor="systemPurpleColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="vDi-ep-o22"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="avataur" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8ka-Y2-nVK">
-                    <rect key="frame" x="16" y="20" width="130" height="171"/>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="250" verticalCompressionResistancePriority="250" image="avataur" translatesAutoresizingMaskIntoConstraints="NO" id="8ka-Y2-nVK">
+                    <rect key="frame" x="16" y="5" width="130" height="170"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="130" id="qLB-yJ-BWk"/>
+                        <constraint firstAttribute="height" constant="170" id="vA7-IU-sAG"/>
+                    </constraints>
                 </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="8ka-Y2-nVK" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="50" id="64f-VK-QfB"/>
-                <constraint firstItem="8ka-Y2-nVK" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="fda-n9-DBi"/>
+                <constraint firstItem="oS2-65-Ui4" firstAttribute="top" secondItem="8ka-Y2-nVK" secondAttribute="bottom" constant="15" id="2rQ-tK-78K"/>
+                <constraint firstItem="F1O-qU-QQ9" firstAttribute="leading" secondItem="8ka-Y2-nVK" secondAttribute="trailing" constant="8" id="3K0-Ia-JlI"/>
+                <constraint firstAttribute="trailing" secondItem="F1O-qU-QQ9" secondAttribute="trailing" constant="10" id="9bp-Ss-zdX"/>
+                <constraint firstItem="Agz-Kb-KuX" firstAttribute="top" secondItem="F1O-qU-QQ9" secondAttribute="bottom" constant="20" id="DSc-iJ-861"/>
+                <constraint firstAttribute="trailing" secondItem="Mbq-5M-vh4" secondAttribute="trailing" constant="10" id="FDg-l5-qke"/>
+                <constraint firstItem="Mbq-5M-vh4" firstAttribute="leading" secondItem="8ka-Y2-nVK" secondAttribute="trailing" constant="8" id="MN4-fd-XHy"/>
+                <constraint firstAttribute="trailing" secondItem="oS2-65-Ui4" secondAttribute="trailing" constant="16" id="NbV-u4-PmW"/>
+                <constraint firstItem="Agz-Kb-KuX" firstAttribute="leading" secondItem="8ka-Y2-nVK" secondAttribute="trailing" constant="8" id="PCX-9A-uaT"/>
+                <constraint firstItem="Mbq-5M-vh4" firstAttribute="leading" secondItem="8ka-Y2-nVK" secondAttribute="trailing" constant="8" id="Qlh-tG-1MQ"/>
+                <constraint firstAttribute="bottom" secondItem="oS2-65-Ui4" secondAttribute="bottom" constant="25" id="gPX-lr-gtt"/>
+                <constraint firstItem="Mbq-5M-vh4" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="ggh-Uw-DgF"/>
+                <constraint firstItem="8ka-Y2-nVK" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="gyy-tS-AvB"/>
+                <constraint firstItem="oS2-65-Ui4" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="l7G-0z-aSm"/>
+                <constraint firstItem="F1O-qU-QQ9" firstAttribute="top" secondItem="Mbq-5M-vh4" secondAttribute="bottom" constant="20" id="ptR-6Y-Q8O"/>
+                <constraint firstAttribute="trailing" secondItem="Agz-Kb-KuX" secondAttribute="trailing" constant="10" id="qr2-NS-XCE"/>
+                <constraint firstItem="8ka-Y2-nVK" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="5" id="xZq-Pk-lsI"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <connections>
-                <outlet property="birthdayLabel" destination="F1O-qU-QQ9" id="Bxw-FE-Vbb"/>
-                <outlet property="cityLabel" destination="Agz-Kb-KuX" id="MA8-gH-OF0"/>
-                <outlet property="imageLabel" destination="8ka-Y2-nVK" id="ztv-GL-nzY"/>
-                <outlet property="nameLabel" destination="Mbq-5M-vh4" id="mQG-cd-1zY"/>
-                <outlet property="textLabel" destination="oS2-65-Ui4" id="ZQw-EI-HUu"/>
-            </connections>
             <point key="canvasLocation" x="137.68115942028987" y="97.767857142857139"/>
         </view>
     </objects>
